--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,6 @@ markers =
         main_page:
         signup_login_page:
         cabinet_page:
+        category_page:
+        order_page:
+        search_page:
